--- a/kuma/views/form.ejs
+++ b/kuma/views/form.ejs
@@ -235,6 +235,11 @@ a:hover {
                     <input type="number" class="form-control" name="price" required>
                   </div>
                   <div class="form-group">
+                    <label for="cutprice">Cutprice:</label>
+                    <input type="number" class="form-control" name="cutprice" id="cutprice">
+                </div>
+                
+                  <div class="form-group">
                     <label for="category">Category:</label>
                     <select class="form-control" name="category" id="category" required>
                       <option value="phones">Phones</option>
