--- a/kuma/public/style.css
+++ b/kuma/public/style.css
@@ -1377,16 +1377,14 @@ p {
 
 
 
-
-
 .title-container {
   text-align: left;
   width: 100%;
   margin: 15px;
   max-width: 500px;
   position: relative;
-  padding-left: 310px; /* Adjust as needed */
-  padding-right: 20px; /* Adjust as needed */
+  padding-left: 20px; /* Initial padding for small screens */
+  padding-right: 20px;
 }
 
 .title {
@@ -1398,9 +1396,39 @@ p {
 .underline {
   margin-top: 5px;
   height: 2px;
-  width: 1100px;
+  width: 100%; /* Full width by default */
   background-color: #333;
   position: absolute;
- 
-  left: 300px; /* Adjust as needed */
+  left: 20px; /* Initial left offset for small screens */
+}
+
+@media screen and (min-width: 600px) {
+  .title-container {
+    padding-left: 60px; /* Increase padding for medium screens */
+  }
+
+  .underline {
+    left: 60px; /* Adjust left offset for medium screens */
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .title-container {
+    padding-left: 100px; /* Increase padding for larger screens */
+  }
+
+  .underline {
+    left: 100px; /* Adjust left offset for larger screens */
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .title-container {
+    padding-left: 310px; /* Adjust as needed for larger screens */
+  }
+
+  .underline {
+    left: 300px; /* Adjust as needed for larger screens */
+    width: 1100px; /* Set specific width for larger screens */
+  }
 }
