--- a/kuma/public/style.css
+++ b/kuma/public/style.css
@@ -766,11 +766,37 @@ select::-ms-expand {
   right: 20px; /* Adjust as needed */
 }
 
+
+
+
+
+
+
 .prev-btn:hover,
 .next-btn:hover {
   background-color: #2980b9;
   transform: scale(1.05);
 }
+
+
+/* Media query for small screens */
+@media screen and (max-width: 768px) {
+  .prev-btn {
+    left: 10px; /* Adjusted position for small screens */
+    margin-left: 0; /* Remove margin for small screens */
+  }
+
+  .next-btn {
+    right: 10px; /* Adjusted position for small screens */
+  }
+}
+
+
+
+
+
+
+
 
 
 
