--- a/kuma/public/style.css
+++ b/kuma/public/style.css
@@ -628,8 +628,8 @@ select::-ms-expand {
 /* Adjust card width for small screens */
 @media screen and (max-width: 768px) {
   .card {
-    width: 60%; /* Adjust width for two cards per row */
-    height: 25%;;
+ 
+  
     margin: 0.8em; /* Adjust margin for spacing */
   }
 }
@@ -637,9 +637,10 @@ select::-ms-expand {
 /* Adjust card width for extra small screens */
 @media screen and (max-width: 480px) {
   .card {
-    width: 25%; /* Adjust width for two cards per row */
+    width: 35%; /* Adjust width for two cards per row */
+    height:50% ;
     margin: 0.5em; /* Adjust margin for spacing */
-    left: 0; /* Reset left position */
+    left: 0; /* Reset left position */ 
     margin-right: 0; /* Reset right margin */
   }
 }
