--- a/kuma/public/style.css
+++ b/kuma/public/style.css
@@ -604,7 +604,8 @@ select::-ms-expand {
   justify-content: flex-start;
     position: relative; 
     margin-left: 21%; /* Adjust margin for smaller screens */
-}.card {
+}
+.card {
   position: relative;
   width: 22%; /* Default width for larger screens */
   margin: 0.8em; /* Adjust margin for spacing */
@@ -615,6 +616,20 @@ select::-ms-expand {
   overflow: hidden;
   margin-right: 1.15em; 
   left: 1.00em; /* Adjust left position for spacing */
+}
+
+/* Adjust card width for phone screens */
+@media screen and (max-width: 480px) {
+  .card {
+    width: 90%; /* Increase width for phone screens */
+  }
+}
+
+/* Adjust margin-left for smaller screens */
+@media screen and (max-width: 768px) {
+  .card {
+    margin-left: 21%; /* Adjust margin for smaller screens */
+  }
 }
 
 /* Adjust card width for medium screens */
@@ -629,10 +644,17 @@ select::-ms-expand {
 @media screen and (max-width: 768px) {
   .card {
     width: 45%; /* Adjust width for two cards per row */
-  
     margin: 0.8em; /* Adjust margin for spacing */
   }
 }
+
+
+
+
+
+
+
+
 
 /* Adjust card width for extra small screens */
 @media screen and (max-width: 480px) {
