--- a/kuma/public/style.css
+++ b/kuma/public/style.css
@@ -615,7 +615,7 @@ select::-ms-expand {
   transition: transform 0.3s ease;
   overflow: hidden;
   margin-right: 1.15em; 
-  left: 1.00em; /* Adjust right margin for spacing */
+  left: 1.00em; /* Adjust left position for spacing */
 }
 
 /* Adjust card width for medium screens */
@@ -637,8 +637,8 @@ select::-ms-expand {
 /* Adjust card width for extra small screens */
 @media screen and (max-width: 480px) {
   .card {
-    width: 90%; /* Adjust width for one card per row */
-    margin: 0.5em auto; /* Center the card and adjust margin for spacing */
+    width: 45%; /* Adjust width for two cards per row */
+    margin: 0.5em; /* Adjust margin for spacing */
     left: 0; /* Reset left position */
     margin-right: 0; /* Reset right margin */
   }
@@ -647,21 +647,7 @@ select::-ms-expand {
 
 
 
-
-
-
-
-
-/* Adjust card width for extra small screens */
-@media screen and (max-width: 480px) {
-  .card {
-    width: 45%; /* Adjust width for two cards per row */
-     
-    margin: 0.5em; /* Adjust margin for spacing */
-    left: 0; /* Reset left position */ 
-    margin-right: 0; /* Reset right margin */
-  }
-}
+ 
 
 .card:hover {
   transform: translateY(-5px);
