--- a/kuma/public/style.css
+++ b/kuma/public/style.css
@@ -1525,7 +1525,7 @@ p {
   width: 100%; /* Full width by default */
   background-color: #333;
   position: absolute;
-  left: 10px; /* Initial left offset */
+  left: 0; /* Initial left offset */
 }
 /* Styles for big screens (minimum width of 576px) */
 @media screen and (min-width: 576px) {
