--- a/kuma/public/style.css
+++ b/kuma/public/style.css
@@ -1510,7 +1510,7 @@ p {
   max-width: 500px;
   position: relative;
   padding-left: 0; /* Initial padding */
-  padding-right: 20px;
+  padding-right: 0;
 }
 
 .title {
