--- a/kuma/public/sty.css
+++ b/kuma/public/sty.css
@@ -1,17 +1,20 @@
 /* Container styles */
 .container {
-  max-width: 1500px;
+  top: 0;
+ 
   margin: 0 auto; /* Center the container */
   position: relative;
   overflow: hidden;
   width: 100%;
-  height: calc(90vh - 50px); /* Full height minus header space */
+  height: 50%;
+  margin-left: 0; /* Adjust margin for smaller screens */
+  margin-right: 0; /* Adjust margin for smaller screens */
 }
 
 /* Image container styles */
 .image-container {
   position: absolute;
-  top: 0;
+
   left: 0;
   width: 100%;
   height: 100%;
