--- a/kuma/public/style.css
+++ b/kuma/public/style.css
@@ -1,6 +1,7 @@
 /* Original CSS styles for the custom header */
 
 .custom-header {
+  top: 0;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -97,7 +98,7 @@
 /* Header Styles */
 .header1 {
   background-color: rgba(247, 247, 247, 0.959);
-  padding: 0.5rem 1rem; /* Reduced padding */
+ top: 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
