--- a/kuma/public/sty.css
+++ b/kuma/public/sty.css
@@ -6,7 +6,7 @@
   position: relative;
   overflow: hidden;
   width: 100%;
-  height: 50%;
+  height: calc(50vh - 30px); /* Full height minus header space */
   margin-left: 0; /* Adjust margin for smaller screens */
   margin-right: 0; /* Adjust margin for smaller screens */
 }
@@ -39,27 +39,17 @@
 /* Media query for phone screens (maximum width of 576px) */
 @media screen and (max-width: 576px) {
   .container {
-    height: calc(100vh - 60px); /* Adjust height for smaller screens */
+    height: calc(50vh - 30px); /* Adjust height for smaller screens */
   }
 
   .image-container img {
     object-fit: cover; /* Ensure images fit properly on smaller screens */
+    height: calc(50vh - 30px); /* Adjust height for smaller screens */
   }
 }
 
 
-
-/* Media query for larger screens (minimum width of 577px) */
-@media screen and (min-width: 577px) {
-  .container {
-    height: calc(100vh - 80px); /* Default height */
-  }
-
-  .image-container img {
-    object-fit: cover; /* Default image fit */
-  }
-}
-
+ 
 
 
 
