--- a/kuma/views/viewFormData.ejs
+++ b/kuma/views/viewFormData.ejs
@@ -57,7 +57,7 @@
             <a class="nav-link" href="/link2">Link 2</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/link3">Link 3</a>
+            <a class="nav-link" href="/index.html">Home </a>
           </li>
         </ul>
       </nav>
