--- a/kuma/public/sty.css
+++ b/kuma/public/sty.css
@@ -1,12 +1,12 @@
 /* Container styles */
 .container {
   top: 0;
- 
+  max-width: 1500px;
   margin: 0 auto; /* Center the container */
   position: relative;
   overflow: hidden;
   width: 100%;
-  height: calc(50vh - 30px); /* Full height minus header space */
+  height: calc(90vh - 50px); /* Full height minus header space */
   margin-left: 0; /* Adjust margin for smaller screens */
   margin-right: 0; /* Adjust margin for smaller screens */
 }
@@ -17,7 +17,7 @@
 
   left: 0;
   width: 100%;
-  height: 100%;
+  height: calc(90vh - 50px); 
   opacity: 0; /* Initially hide all images */
   transition: opacity 1.0s ease; /* Smooth transition for opacity */
   z-index: -1; /* Move images behind other content */
@@ -30,7 +30,7 @@
 
 .image-container img {
   width: 100%;
-  height: 100%;
+  height: calc(90vh - 50px); 
   object-fit: cover; /* Cover the container while maintaining aspect ratio */
 }
 
@@ -38,19 +38,15 @@
 
 /* Media query for phone screens (maximum width of 576px) */
 @media screen and (max-width: 576px) {
-  .container {
-    height: calc(50vh - 60px); /* Adjust height for smaller screens */
+  .container {  height: calc(90vh - 50px); /* Full height minus header space */
   }
 
   .image-container img {
     object-fit: cover; /* Ensure images fit properly on smaller screens */
+    height: calc(90vh - 50px); 
   }
 }
-
-
  
-
-
 
 
 
