--- a/kuma/public/style.css
+++ b/kuma/public/style.css
@@ -178,18 +178,21 @@ select::-ms-expand {
 
 .menu-button {
   cursor: pointer;
+  margin-left: 0;
 }
+
 
 .menu-icon {
   font-size: 2em;
   color: #333;
-  margin-right: 40px; /* Add margin to separate from other elements */
+ left: 0;
+  /* Add margin to separate from other elements */
 }
 
 /* Dropdown Content Styling */
 .dropdown-content {
   display: none;
-  position: absolute;
+  position: fixed; /* Update to position: fixed */
   background-color: #f9f9f9;
   min-width: 160px;
   z-index: 100;
@@ -259,7 +262,7 @@ select::-ms-expand {
 .search-bar {
   display: flex;
   align-items: center;
-  margin-right: 20px; /* Add margin to separate from other elements */
+  margin-right: 50px; /* Add margin to separate from other elements */
 }
 
 .search-bar input[type="text"] {
@@ -268,7 +271,7 @@ select::-ms-expand {
   border: none;
   border-radius: 15px;
   background-color: #f4f4f4;
-  font-size: 0.7em;
+  font-size: 1.7em;
   color: #333;
   transition: background-color 0.3s, box-shadow 0.3s;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
@@ -308,6 +311,59 @@ select::-ms-expand {
   color: #fff;
   font-size: 1.2em;
 }
+
+
+
+
+
+/* Media query for phone screens (maximum width of 768px) */
+@media screen and (max-width: 576px) {
+  .dropdown-content {
+    position: static;
+    box-shadow: none;
+  }
+
+  .dropdown-content a {
+    padding: 10px;
+  }
+
+  .logo1 {
+    display: none;
+  }
+}
+/* Media query for larger screens (minimum width of 769px) */
+@media screen and (min-width: 576px) {
+  .dropdown-content {
+    position: absolute;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  }
+
+  .dropdown-content a {
+    padding: 12px 16px;
+  }
+
+  .logo1 {
+    display: block;
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 /* Media Queries */
 @media only screen and (max-width: 768px) {
@@ -1016,13 +1072,13 @@ select::-ms-expand {
 /* Cart icon */
 .cart-icon {
   position: relative;
-  top: 8px;
-  right: 20px;
-  font-size: 24px;
+  top:0px;
+ 
+  font-size: 15px;
   cursor: pointer;
   background-color: #8d5e5e;
   color: #fff;
-  padding: 10px;
+  padding: 5px;
   border-radius: 50%;
   display: flex;
   align-items: center;
@@ -1044,8 +1100,8 @@ select::-ms-expand {
   display: none;
   position: fixed;
   top: 50px;
-  right: 20px;
-  width: 300px;
+  right: 10px;
+  width: 200px;
   background-color: #fff;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   z-index: 999;
